tests/qd/errors/error_always_fail.qd
fn always_error(a:i -- result:i)! {
	0
	"Error occurred" 1 error
}

fn main() {
	"Test 1: " .
	42 always_error if {
		. nl
	} else {
		drop "Failed (expected)" . nl
	}

	"Test 2: " .
	10 always_error if {
		. nl
	} else {
		drop "Failed (expected)" . nl
	}
}
